--- a/TimeATime.html
+++ b/TimeATime.html
@@ -11,10 +11,9 @@
 <script src="libs/jquery-ui/jquery-ui.js"></script>
 
 <script src="libs/three.js/three.js"></script>
-<script src="libs/three.js/controls/OrbitControls.js"></script>
 
 <script src="TimeATime.js"></script>
-<!--script src="sceneHandlers.js"></script-->
+<script src="sceneHandlers.js"></script>
 
 <script id="fragmentShader" type="x-shader/x-fragment">
 
