--- a/TimeATime.html
+++ b/TimeATime.html
@@ -74,6 +74,7 @@
 				let canvas = document.getElementById("webglcanvas");
                 innitCannon();
 				scene_setup(canvas);
+				create_portal();
 
 				// Run the run loop
 				run();
