--- a/TimeATime.html
+++ b/TimeATime.html
@@ -11,6 +11,9 @@
 <script src="libs/jquery-ui/jquery-ui.js"></script>
 
 <script src="libs/three.js/three.js"></script>
+<script src="libs/three.js/utils/promiseLoader.js"></script>
+<script src="libs/three.js/loaders/MTLLoader.js"></script>
+<script src="libs/three.js/loaders/OBJLoader.js"></script>
 
 <!--Add Cannon Js library to use as the physics engine-->
 <script src="libs/cannon.js/cannon.js"></script>
