--- a/TimeATime.html
+++ b/TimeATime.html
@@ -120,11 +120,12 @@
 
 		<!--Game's Title Screen-->
 		<div id="titleScreen">
-
+			
 			<!--Background music https://www.bensound.com/bensound-music/bensound-sadday.mp3 -->
+			<!--
 			<audio autoplay loop>
 				<source src="music/bensound-sadday.mp3" type="audio/mp3">
-			</audio>
+			</audio>-->
 
 			<!--Main Menu-->
 			<div id="menu">
