Fixed turtle grab :)

--- a/TimeATime.html
+++ b/TimeATime.html
@@ -140,7 +140,7 @@
 				<h1 id="titleInstructions">Instructions</h1>
 				<p id="instructionsText">Move: Left and right arrow</p>
 				<p id="instructionsText2">Jump: Spacebar</p>
-				<p id="instructionsText3">Grab: E</p>
+				<p id="instructionsText3">Grab: G</p>
 				<p id="instructionsText4">You are stuck in limbo. Reach the end of the levels using the portals to try and find the exit</p>
 				<button id="goBackButton" onclick="toggleInstructions(),toggleMenu()">Go Back</button>
 			</div>
