--- a/TimeATime.html
+++ b/TimeATime.html
@@ -16,10 +16,13 @@
 <script src="libs/three.js/loaders/MTLLoader.js"></script>
 <script src="libs/three.js/loaders/OBJLoader.js"></script>
 
+<script src="../../libs/tween.js/tween.js"></script>
+<script src="../../libs/keyframe.js/keyframe.js"></script>
+
 <!--Add Cannon Js library to use as the physics engine-->
 <script src="libs/cannon.js/cannon.js"></script>
 
-<script src="TimeATime.js"></script>
+<script src="TimeATime2.js"></script>
 <script src="sceneHandlers.js"></script>
 
 <script id="fragmentShader" type="x-shader/x-fragment">
