Fixed turtle once again

--- a/TimeATime.html
+++ b/TimeATime.html
@@ -22,7 +22,7 @@
 <!--Add Cannon Js library to use as the physics engine-->
 <script src="libs/cannon.js/cannon.js"></script>
 
-<script src="TimeATime2.js"></script>
+<script src="TimeATime.js"></script>
 <script src="sceneHandlers.js"></script>
 
 <script id="fragmentShader" type="x-shader/x-fragment">
