--- a/TimeATime.html
+++ b/TimeATime.html
@@ -22,8 +22,12 @@
 <!--Add Cannon Js library to use as the physics engine-->
 <script src="libs/cannon.js/cannon.js"></script>
 
-<script src="TimeATime.js"></script>
 <script src="sceneHandlers.js"></script>
+<script src="physics.js"></script>
+<script src="level1.js"></script>
+<script src="player.js"></script>
+<script src="turtle.js"></script>
+<script src="TimeATime.js"></script>
 
 <script id="fragmentShader" type="x-shader/x-fragment">
 
