--- a/TimeATime.html
+++ b/TimeATime.html
@@ -24,7 +24,7 @@
 
 <script src="sceneHandlers.js"></script>
 <script src="physics.js"></script>
-<script src="level1.js"></script>
+<script src="levels.js"></script>
 <script src="player.js"></script>
 <script src="turtle.js"></script>
 <script src="TimeATime.js"></script>
