--- a/TimeATime.html
+++ b/TimeATime.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="libs/jquery-ui/jquery-ui.css" />
 <link rel="stylesheet" href="css/threejslights.css" />
 <link rel="stylesheet" href="css/threejsshaders.css" />
+<link rel="stylesheet" href="css/threejsshadows.css" />
 <link rel="stylesheet" href="css/titleScreen.css" />
+
 
 <script src="libs/jquery-3.4.1/jquery-3.4.1.min.js"></script>
 <script src="libs/jquery-ui/jquery-ui.js"></script>
